fix(files): scrollbar

--- a/frontend/src/assets/index.css
+++ b/frontend/src/assets/index.css
@@ -6,12 +6,28 @@
   box-sizing: border-box;
   transition: all .3s ease-in-out;
   user-select: none;
-  -ms-overflow-style: none;
-  scrollbar-width: none;
 }
 
-*::-webkit-scrollbar {
+.custom-scroll::-webkit-scrollbar-button {
   display: none;
+}
+
+.custom-scroll::-webkit-resizer {
+  display: none;
+  visibility: hidden;
+}
+
+.custom-scroll::-webkit-scrollbar {
+  width: 3px;
+}
+
+.custom-scroll::-webkit-scrollbar-track {
+  width: 0;
+}
+
+.custom-scroll::-webkit-scrollbar-thumb {
+  background: #333333;
+  opacity: 10%;
 }
 
 .table-shadow {
